--- a/source/layouts/layout.erb
+++ b/source/layouts/layout.erb
@@ -9,7 +9,7 @@
     <!-- Use title if it's in the page YAML frontmatter -->
     <title><%= current_page.data.title || "Middleman" %></title>
 
-    <%= stylesheet_link_tag "site" %>
+    <%= stylesheet_link_tag "main" %>
     <%= javascript_include_tag "site" %>
   </head>
 
