--- a/source/stylesheets/main.css
+++ b/source/stylesheets/main.css
@@ -1,5 +1,7 @@
+@import "./_variables";
+
 body {
-  background-color: #fbc547;
+  background-color: $gold;
   color: #333;
   font-family: -apple-system, BlinkMacSystemFont, "Avenir Next", "Avenir",
     "Segoe UI", "Lucida Grande", "Helvetica Neue", "Helvetica", "Fira Sans",
@@ -7,6 +9,8 @@ body {
     "Franklin Gothic Medium", "Century Gothic", "Liberation Sans", sans-serif;
   padding: 18vh 1rem;
   text-align: center;
+  display: flex;
+  flex-direction: column;
 }
 
 a {
